--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Angular Project to GitHub Pages
 on:
   push:
     branches:
-      - initial-setup  # or the branch you want to deploy from
+      - main  # or the branch you want to deploy from
 
 jobs:
   build-and-deploy:
