--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "fawley-waterside-dog-show",
   "version": "0.1.0",
+  "homepage": "https://eddiemosh.github.io/fawley-waterside-dog-show/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -11,6 +12,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
@@ -21,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
