--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "fawley-waterside-dog-show",
   "version": "0.1.0",
-  "homepage": "https://eddiemosh.github.io/fawley-waterside-dog-show/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -12,12 +11,15 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "gh-pages": "^6.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
